todoについて簡単に表示

--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,7 +1,7 @@
 <h2>TO DO</h2>
 
 <ul class="todos">
-  <li *ngFor="let todo of todoWithCategories">
+  <li *ngFor="let todo of todoList">
     <button type="button">
       <span class="badge">{{todo.todo.title}}</span>
       <span class="name">{{todo.category.name}}</span>
