body属性の入力と表示を複数行化

--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -18,7 +18,7 @@
     <input id="title" type="text" formControlName="title">
 
     <label for="body">BODY: </label>
-    <input id="body" type="text" formControlName="body">
+    <textarea id="body" type="text" formControlName="body"> </textarea>
 
     <label id="categoryId">CATEGORY: </label>
     <select id="categoryId" formControlName="category_id">
