コメントの解除

--- a/src/app/todo-detail/todo-detail.component.html
+++ b/src/app/todo-detail/todo-detail.component.html
@@ -19,6 +19,7 @@
       </select>
   
       <button type="submit" [disabled]="!editForm.valid">Submit</button>
+
     </form>
 </div>
-<!-- <button type="button" (click)="goBack()">go back</button> -->
+<button type="button" (click)="goBack()">go back</button>
