Statusの比較関数を定義

--- a/src/app/todo-detail/todo-detail.component.html
+++ b/src/app/todo-detail/todo-detail.component.html
@@ -14,7 +14,7 @@
       </select>
 
       <label id="status">STATUS: </label>
-      <select id="status" formControlName="state">
+      <select id="status" formControlName="state" [compareWith]="compareState">
         <option *ngFor="let state of allStatusType" [ngValue]="state">{{state.name}}</option>
       </select>
   
